@@ -1028,13 +1028,6 @@ with contextlib.suppress(AttributeError):  # inspect.Signature() is new in 3.3
     ])
 
 
-# Temporary functions for "where" keyword args.
-# NOTE!!!: Remove these after implementing full
-# predicate support for keyword filtering.
-_is_truthy = lambda x: bool(x)
-_is_falsy = lambda x: not bool(x)
-
-
 class Selector(object):
     """A class to quickly load and select tabular data. The given
     *objs*, *\*args*, and *\*\*kwds*, can be any values supported
@@ -1207,13 +1200,6 @@ class Selector(object):
     def _execute_query(self, select_clause, trailing_clause=None, **kwds_filter):
         """Execute query and return cursor object."""
         try:
-            for key, val in kwds_filter.items():  # Temporary partial keyword
-                if val is True:                   # handling to use until full
-                    val = _is_truthy              # predicate support is ready.
-                elif val is False:
-                    val = _is_falsy
-                kwds_filter[key] = val
-
             # Build select-query.
             stmnt = 'SELECT {0} FROM {1}'.format(select_clause, self._table)
             where_clause, params = self._build_where_clause(kwds_filter)
