@@ -6,6 +6,7 @@ COMING SOON (0.9.2)
 -------------------
 
 * Improved data handling features and Python 3.7 support.
+* Changed Selector class keyword filtering to support predicate matching.
 * Changed Query class:
     * Added flatten() method to serialize dictionary results.
     * Added to_csv() method to quickly save results as a CSV file.
